# Makefile.am for Documentation

documentationdir   = $(datadir)/gpsdrive/Documentation
documentation_DATA = TODO GPS-receivers LEEME AUTHORS CREDITS README \
	LISEZMOI README.FreeBSD   README.gpspoint2gspdrive \
	FAQ.gpsdrive FAQ.gpsdrive.fr README.SQL \
	NMEA.txt README.kismet README.nasamaps

EXTRA_DIST = $(documentation_DATA)
