# Makefile.am for Documentation

documentationdir   = $(datadir)/gpsdrive/Documentation
documentation_DATA = TODO GPS-receivers LEEME CREDITS \
	LISEZMOI LISEZMOI.FreeBSD LISEZMOI.kismet LISEZMOI.SQL \
	README.FreeBSD   README.gpspoint2gspdrive \
	FAQ.gpsdrive FAQ.gpsdrive.fr README.SQL README.mysql \
	NMEA.txt README.kismet README.nasamaps \
	README.lib_map README.Bluetooth

EXTRA_DIST= $(documentation_DATA)
