# Makefile.am for Documentation

documentationdir   = $(datadir)/gpsdrive/Documentation
documentation_DATA = \
	CREDITS \
	FAQ.gpsdrive FAQ.gpsdrive.fr \
	GPS-receivers \
	LEEME \
	LISEZMOI.FreeBSD\
	LISEZMOI.SQL \
	LISEZMOI.kismet \
	LISEZMOI \
	NMEA.txt \
	README.Bluetooth \
	README.Fedora \
	README.FreeBSD \
	README.OpenStreetMap-Vektordata \
	README.SQL README.mysql \
	README.Upgrade \
	README.gpspoint2gspdrive \
	README.kismet \
	README.lib_map \
	README.nasamaps \
	TODO


EXTRA_DIST= $(documentation_DATA)
